Bugfix: color tool not completely visible in iOS Chrome.

--- a/src/app/map/tools/tool-edit/layer-configuration.component.scss
+++ b/src/app/map/tools/tool-edit/layer-configuration.component.scss
@@ -33,7 +33,7 @@ app-layer-configuration {
 
 .color-picker {
     left: 10px !important;
-    top: calc(100% - 350px) !important;
+    top: calc(100% - 450px) !important;
 }
 
 .color-btn {
